@@ -54,6 +54,11 @@ minaraad-log-path = ${buildout:directory}/var/log
 varnish_purge_hosts =
     "127.0.0.1";
 
+# IP or hostname that varnish listens on.  In Belgium this should be
+# the public interface, because the loadbalancer is on a separate
+# machine.
+varnish_host = 127.0.0.1
+
 
 [plone]
 recipe = plone.recipe.plone
@@ -188,7 +193,7 @@ configure-options =
 recipe = plone.recipe.varnish
 daemon = ${buildout:parts-directory}/varnish-build/sbin/varnishd
 config = ${buildout:parts-directory}/conf/varnish.vcl
-bind = 127.0.0.1:${conf:varnish}
+bind = ${conf:varnish_host}:${conf:varnish}
 cache-size = ${conf:varnish-cache-size}
 mode = foreground
 
